# app/Http/Resources/ReviewResource.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ReviewResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'id'      => $this->id,
+            'user_id' => $this->user_id,
+            'car_id'  => $this->car_id,
+            'rating'  => $this->rating,
+            'comment' => $this->comment,
+            'created_at' => $this->created_at->toDateTimeString(),
+        ];
+    }
+}
