# routes/api.php
@@ -4,10 +4,14 @@ use App\Http\Controllers\API\CarSwaggerController;
 use App\Http\Controllers\API\CategorySwaggerController;
 use App\Http\Controllers\API\ReservationSwaggerController;
 use App\Http\Controllers\API\UserSwaggerController;
+use App\Http\Controllers\API\ReviewSwaggerController;
+use App\Http\Controllers\API\WishlistSwaggerController;
 use App\Http\Controllers\CarController;
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\ReservationController;
 use App\Http\Controllers\UserController;
+use App\Http\Controllers\ReviewController;
+use App\Http\Controllers\WishlistController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -43,6 +47,12 @@ Route::get('/categories', [CategoryController::class, 'getAllData']);
 Route::delete('/categories/{id}/delete', [CategoryController::class, 'destroy']);
 
 Route::put('/categories/{id}/update', [CategoryController::class, 'update']);
+
+Route::apiResource('reviews', ReviewController::class);
+
+Route::apiResource('wishlists', WishlistController::class);
+
+
 
 //MODEL CATEGORY YA
 Route::group([], function () {
@@ -89,4 +99,25 @@ Route::group([], function () {
     Route::get('reservation/{id}', [ReservationSwaggerController::class, 'getReservation']);
     Route::put('reservation/{id}', [ReservationSwaggerController::class, 'update']);
     Route::delete('reservation/{id}', [ReservationSwaggerController::class, 'destroy']);
+});
+
+Route::group([], function () {
+    // Route untuk menambahkan review baru
+    Route::post('reviews', [reviewSwaggerController::class, 'store']);
+
+    // Route untuk mengambil semua review
+    Route::get('reviews', [reviewSwaggerController::class, 'getAllData']);
+
+    // Route untuk menghapus review berdasarkan ID
+    Route::delete('reviews/{id}', [reviewSwaggerController::class, 'destroy']);
+
+    // Route untuk memperbarui data review berdasarkan ID
+    Route::put('reviews/{id}', [reviewSwaggerController::class, 'update']);
+});
+
+Route::group([], function () {
+    Route::post('wishlists', [WishlistSwaggerController::class, 'store']);
+    Route::get('wishlists/{id}', [WishlistSwaggerController::class, 'getAllData']);
+    Route::put('wishlists/{id}', [WishlistSwaggerController::class, 'update']);
+    Route::delete('wishlists/{id}', [WishlistSwaggerController::class, 'destroy']);
 });
